# TP-Concurrentes

./: Cargo.toml  README.md  input.txt  out.txt  transactions.txt
log/: replic_0.txt  replic_1.txt  replic_2.txt  replic_3.txt
src/: actor_airline.rs  actor_bank.rs  actor_hotel.rs  actor_transmiter.rs  airline.rs  alglobo.rs  bank.rs  bully.rs  commons.rs  connection.rs  externalAirline.rs  externalBank.rs  externalHotel.rs  hotel.rs  leader.rs  lib.rs  logger.rs  main.rs  payment.rs  replic.rs  stats.rs  transaction_writer.rs
src/common/: mod.rs  msg_commit.rs  msg_rollback.rs
src/commons/: commons.rs
src/leader/: main_loop.rs  mod.rs  msg_discover.rs  msg_new_replic.rs
src/lib/: lib.rs
src/replic/: main_loop.rs  mod.rs  msg_discover.rs  msg_election.rs  msg_new_replic.rs  msg_shutdown.rs  replic.rs
test/: multiple_thread_log.txt
transactions/: commits0.txt  commits3.txt  rollbacks0.txt  rollbacks1.txt  rollbacks2.txt  rollbacks3.txt
