[package]
name = "tp"
version = "0.1.0"
edition = "2021"
default-run = "alglobo"

[[bin]]
name = "alglobo"
path = "src/main.rs"

[[bin]]
name = "bank"
path = "src/bank.rs"

[[bin]]
name = "airline"
path = "src/airline.rs"

[[bin]]
name = "hotel"
path = "src/hotel.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
actix = "0.13.0"
actix-rt = "2.2"
futures = "0.3"
async-std = "1.0" 
rand = "0.8.5"
